--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "apollo": "^2.34.0",
-    "apollo-boost": "^0.4.9",
-    "apollo-client": "^2.6.10",
+    "@apollo/client": "^3.5.8",
     "bootstrap": "^4.4.1",
     "graphql": "^14.7.0",
     "graphql-tag": "^2.12.6",
