--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "express": "^4.17.1",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10",
-    "node": "^18.14.0"
+    "mongoose": "^5.9.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
+  },
+  "engines": {
+    "node": "16.16.0"
   }
 }
