--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.2"
   },
+  "engines": {
+    "node": "16.16.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
